force-app/main/default/objects/copado__Scheduled_Job_Run__c/fields/copado__Run_as_User__c.field-meta.xml
<CustomField>
    <fullName>copado__Run_as_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run as User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduled_Job_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>