force-app/main/default/objects/copado__Scheduled_Job_Run__c/fields/copado__Scheduled_Job__c.field-meta.xml
<CustomField>
    <fullName>copado__Scheduled_Job__c</fullName>
    <label>Scheduled Job</label>
    <referenceTo>copado__Scheduled_Job__c</referenceTo>
    <relationshipLabel>Scheduled Job Runs</relationshipLabel>
    <relationshipName>Scheduled_Job_Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>